Install 0xProto as code font

--- a/home/nat/common/optional/waybar/style.css
+++ b/home/nat/common/optional/waybar/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Source Sans Pro", "FiraCode Nerd Font Propo";
+  font-family: "Source Sans Pro", "0xProto Nerd Font Propo";
   font-size: 1em;
   margin: 0;
   padding: 0;
