--- a/home/nat/common/optional/waybar/style.css
+++ b/home/nat/common/optional/waybar/style.css
@@ -7,7 +7,7 @@
 
 window#waybar {
   background-color: transparent;
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), transparent);
+  /*background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.25), transparent);*/
 }
 
 .horizontal.modules-left {
